cluster/gitops/monitoring/exporters/opnsense/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: opnsense-exporter
specs:
  - description: opnsense-exporters
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: opnsense-exporter
        app.kubernetes.io/instance: opnsense-exporter
    egress:
      # To OPNsense instances
      - toCIDRSet:
          - cidrGroupRef: routers
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
